# autowriter

./: pyproject.toml
.trae/documents/: fix-react-anthropic.md  fix-react-tool-call.md  test-writing-agent.md  use-anthropic-sdk.md
.trae/rules/: write.md
.trae/specs/novel-assistant-master/: checklist.md  spec.md  tasks.md
.trae/specs/phase-2-memory/: checklist.md  spec.md  tasks.md
.trae/specs/phase-3-tools/: checklist.md  spec.md  tasks.md
.trae/specs/project-workflow/: checklist.md  spec.md  tasks.md
autowriter/config/: settings.py
autowriter/src/: PROJECT_STRUCTURE.md  __init__.py
autowriter/src/core/: __init__.py  agent.py  engine.py  react.py  state.py
autowriter/src/interface/: __init__.py
autowriter/src/llm/: __init__.py  client.py  message.py
autowriter/src/memory/: __init__.py  detail_layer.py  index_layer.py  memory_integrator.py  retriever.py  state_layer.py
autowriter/src/prompt/: __init__.py
autowriter/src/tools/: __init__.py  memory.py  novel_tools.py  state_manager.py
autowriter/src/validator/: __init__.py
my_novel/: novel.md  outline.md
my_novel/.novel/: memory_index.md  state.json
my_novel/.novel/drafts/: chapter_001.md
my_novel/.novel/memories/: characters.md  foreshadowing.md  timeline.md  worldview.md
tests/: test_agent_memory.py  test_agent_run.py  test_agent_tools_flow.py  test_simple.py  test_tools.py
